2008-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/gst.c: (init_post):
	* gst/gstplugin.c: (_gst_plugin_register_static),
	  (gst_plugin_register_static), (_gst_plugin_initialize):
	* gst/gstplugin.h: (GstPluginFilter):
	  Change API of gst_plugin_register_static() to not take
	  a GstPluginDesc, but rather just take all the arguments
	  in a GstPluginDesc directly. This is more intuitive and
	  avoids certain mistakes when porting code from
	  GST_PLUGIN_DEFINE_STATIC to gst_plugin_register_static().
	  Fixes #510187.

	* tests/check/gst/gstplugin.c:
	  Fix up for changed API.

2008-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/faq/legal.xml:
	  Update FAQ, Totem actually has an exception these days.

2008-01-14  Jan Schmidt  <jan.schmidt@sun.com>

	* win32/common/libgstreamer.def:
	Add new API declarations

2008-01-14  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstminiobject.c:
	  Spelling fixes for the API docs.

2008-01-14  Stefan Kost  <ensonic@users.sf.net>

	* libs/gst/base/gstbasetransform.c:
	  Fix long property description for QoS.

2008-01-12  Jan Schmidt  <Jan.Schmidt@sun.com>

	* gst/gst.c:
	_gst_trace_on is already provided by gsttrace.h, no need to declare
	it ourselves.

	* docs/libs/gstreamer-libs-sections.txt:
	Add 'buffers', 'check_cond' and 'check_mutex' from libgstcheck
	and remove strange tcase_add_test which is outputting a warning.

	* libs/gst/check/gstcheck.c:
	* libs/gst/check/gstcheck.h:
	Properly declare 'buffers', 'check_cond', 'check_mutex' extern
	and define them in gstcheck.c instead of having every .c file whcih
	includes gstcheck.h be defining its own copy and relying on symbol
	interposing to marry them all, which doesn't work on Solaris.

	* tests/check/elements/identity.c: (GST_START_TEST):
	Don't define 'buffers' locally, it comes from libgstcheck.

	* tests/check/generic/sinks.c: (send_buffer):
	Fix type of variable (GstFlowReturn, not GstStateChangeReturn)
